# GoGoManager

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/db/: mod.rs
src/db/migrations/: 20250109104903_initial_migration.down.sql  20250109104903_initial_migration.up.sql
src/errors/: mod.rs
src/handlers/: auth.rs  department.rs  employee.rs  file.rs  mod.rs  user.rs
src/models/: department.rs  employee.rs  file.rs  mod.rs  user.rs
src/utils/: jwt.rs  mod.rs  s3.rs  validation.rs
