[package]
name = "gogomanager_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time", "chrono"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }  
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.3.0"
aws-config = "1.5.13"
aws-sdk-s3 = "1.68.0"
aws-sdk-location = "1.56.0"
tokio = { version = "1.0", features = ["full"] }
infer = "0.16.0"
log = "0.4"
env_logger = "0.11.6"
argon2 = "0.5.3"
rand = "0.8.5"
time = { version = "0.3", features = ["serde"] }
aws-types = "1.3.3"